updated navs and content

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    <br />
+    <br />
     <%= yield %>
+    <br />
+    <br />
+    <%= render 'layouts/footer' %>    
   </body>
 </html>
